testsuite/tests/parser/should_fail/readFail032.hs

-- Test for trac #314

{-
/*
  This
  uses
  up
  some
  lines
  This
  uses
  up
  some
  lines
 */
-}

module ShouldFail where

type_error = "Type error on line 21":"Type error on line 21"

